<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/grp1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notice" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_ebook"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/menu_ebook" />
        <item
            android:id="@+id/nav_document"
            android:icon="@drawable/ic_baseline_dock_24"
            android:title="@string/menu_document" />
        <item
            android:id="@+id/nav_scholarship"
            android:icon="@drawable/ic_menu_scholarship"
            android:title="@string/menu_scholarship" />

        <item
            android:id="@+id/nav_placement"
            android:icon="@drawable/ic_placement_icon"
            android:title="Placement"/>
        <item
            android:id="@+id/nav_faculty"
            android:icon="@drawable/ic_menu_faculty"
            android:title="@string/faculty" />

    </group>
    <group android:id="@+id/grp2">
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_contact"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_setting"/>
    </group>
</menu>